pkgs/cupertino_http/lib/src/cronet.dart


  late final _Cronet_Runnable_CreateWithPtr = _lookup<
      ffi.NativeFunction<
          Cronet_RunnablePtr Function(
              Cronet_Runnable_RunFunc)>>('Cronet_Runnable_CreateWith');
  late final _Cronet_Runnable_CreateWith = _Cronet_Runnable_CreateWithPtr
      .asFunction<Cronet_RunnablePtr Function(Cronet_Runnable_RunFunc)>();

  /// Destroy an instance of Cronet_Executor.
  void Cronet_Executor_Destroy(
    Cronet_ExecutorPtr self,
  ) {
    return _Cronet_Executor_Destroy(
      self,
    );
  }

  late final _Cronet_Executor_DestroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(Cronet_ExecutorPtr)>>(
          'Cronet_Executor_Destroy');
  late final _Cronet_Executor_Destroy = _Cronet_Executor_DestroyPtr.asFunction<
      void Function(Cronet_ExecutorPtr)>();

  /// Set and get app-specific Cronet_ClientContext.
  void Cronet_Executor_SetClientContext(
    Cronet_ExecutorPtr self,
    Cronet_ClientContext client_context,
  ) {
    return _Cronet_Executor_SetClientContext(
      self,
      client_context,
    );
  }

  late final _Cronet_Executor_SetClientContextPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(Cronet_ExecutorPtr,
              Cronet_ClientContext)>>('Cronet_Executor_SetClientContext');
  late final _Cronet_Executor_SetClientContext =
      _Cronet_Executor_SetClientContextPtr.asFunction<
          void Function(Cronet_ExecutorPtr, Cronet_ClientContext)>();

  Cronet_ClientContext Cronet_Executor_GetClientContext(
    Cronet_ExecutorPtr self,
  ) {
    return _Cronet_Executor_GetClientContext(
      self,
    );
  }

  late final _Cronet_Executor_GetClientContextPtr = _lookup<
          ffi
          .NativeFunction<Cronet_ClientContext Function(Cronet_ExecutorPtr)>>(
      'Cronet_Executor_GetClientContext');
  late final _Cronet_Executor_GetClientContext =
      _Cronet_Executor_GetClientContextPtr.asFunction<
          Cronet_ClientContext Function(Cronet_ExecutorPtr)>();

  /// Abstract interface Cronet_Executor is implemented by the app.
  /// The following concrete methods forward call to app implementation.
  /// The app doesn't normally call them.
  void Cronet_Executor_Execute(
    Cronet_ExecutorPtr self,
    Cronet_RunnablePtr command,
  ) {
    return _Cronet_Executor_Execute(
      self,
      command,
    );
  }

  late final _Cronet_Executor_ExecutePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(Cronet_ExecutorPtr,
              Cronet_RunnablePtr)>>('Cronet_Executor_Execute');
  late final _Cronet_Executor_Execute = _Cronet_Executor_ExecutePtr.asFunction<
      void Function(Cronet_ExecutorPtr, Cronet_RunnablePtr)>();

  /// The app creates an instance of Cronet_Executor by providing custom functions
  /// for each method.
  Cronet_ExecutorPtr Cronet_Executor_CreateWith(
    Cronet_Executor_ExecuteFunc ExecuteFunc,
  ) {
    return _Cronet_Executor_CreateWith(
      ExecuteFunc,
    );
  }

  late final _Cronet_Executor_CreateWithPtr = _lookup<
      ffi.NativeFunction<
          Cronet_ExecutorPtr Function(
              Cronet_Executor_ExecuteFunc)>>('Cronet_Executor_CreateWith');
  late final _Cronet_Executor_CreateWith = _Cronet_Executor_CreateWithPtr
      .asFunction<Cronet_ExecutorPtr Function(Cronet_Executor_ExecuteFunc)>();

  /// Create an instance of Cronet_Engine.
  Cronet_EnginePtr Cronet_Engine_Create() {
    return _Cronet_Engine_Create();
  }

  late final _Cronet_Engine_CreatePtr =
      _lookup<ffi.NativeFunction<Cronet_EnginePtr Function()>>(
          'Cronet_Engine_Create');
  late final _Cronet_Engine_Create =
      _Cronet_Engine_CreatePtr.asFunction<Cronet_EnginePtr Function()>();

  /// Destroy an instance of Cronet_Engine.
  void Cronet_Engine_Destroy(
    Cronet_EnginePtr self,
  ) {
    return _Cronet_Engine_Destroy(
      self,
    );
  }

  late final _Cronet_Engine_DestroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(Cronet_EnginePtr)>>(
          'Cronet_Engine_Destroy');
  late final _Cronet_Engine_Destroy =
      _Cronet_Engine_DestroyPtr.asFunction<void Function(Cronet_EnginePtr)>();

  /// Set and get app-specific Cronet_ClientContext.
  void Cronet_Engine_SetClientContext(
    Cronet_EnginePtr self,
    Cronet_ClientContext client_context,
  ) {
    return _Cronet_Engine_SetClientContext(
      self,
      client_context,
    );
  }

  late final _Cronet_Engine_SetClientContextPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(Cronet_EnginePtr,
              Cronet_ClientContext)>>('Cronet_Engine_SetClientContext');
  late final _Cronet_Engine_SetClientContext =
      _Cronet_Engine_SetClientContextPtr.asFunction<
          void Function(Cronet_EnginePtr, Cronet_ClientContext)>();

  Cronet_ClientContext Cronet_Engine_GetClientContext(
    Cronet_EnginePtr self,
  ) {
    return _Cronet_Engine_GetClientContext(
      self,
    );
  }

  late final _Cronet_Engine_GetClientContextPtr = _lookup<
          ffi.NativeFunction<Cronet_ClientContext Function(Cronet_EnginePtr)>>(
      'Cronet_Engine_GetClientContext');
  late final _Cronet_Engine_GetClientContext =
      _Cronet_Engine_GetClientContextPtr.asFunction<
          Cronet_ClientContext Function(Cronet_EnginePtr)>();

  /// Concrete methods of Cronet_Engine implemented by Cronet.
  /// The app calls them to manipulate Cronet_Engine.
  int Cronet_Engine_StartWithParams(
    Cronet_EnginePtr self,
    Cronet_EngineParamsPtr params,
  ) {
    return _Cronet_Engine_StartWithParams(
      self,
      params,
    );
  }

  late final _Cronet_Engine_StartWithParamsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(Cronet_EnginePtr,
              Cronet_EngineParamsPtr)>>('Cronet_Engine_StartWithParams');
  late final _Cronet_Engine_StartWithParams = _Cronet_Engine_StartWithParamsPtr
      .asFunction<int Function(Cronet_EnginePtr, Cronet_EngineParamsPtr)>();

  bool Cronet_Engine_StartNetLogToFile(
    Cronet_EnginePtr self,
    Cronet_String file_name,
    bool log_all,
  ) {
    return _Cronet_Engine_StartNetLogToFile(
      self,
      file_name,
      log_all,
    );
  }

  late final _Cronet_Engine_StartNetLogToFilePtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(Cronet_EnginePtr, Cronet_String,
              ffi.Bool)>>('Cronet_Engine_StartNetLogToFile');
  late final _Cronet_Engine_StartNetLogToFile =
      _Cronet_Engine_StartNetLogToFilePtr.asFunction<
          bool Function(Cronet_EnginePtr, Cronet_String, bool)>();

  void Cronet_Engine_StopNetLog(
    Cronet_EnginePtr self,
  ) {
    return _Cronet_Engine_StopNetLog(
      self,
    );
  }

  late final _Cronet_Engine_StopNetLogPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(Cronet_EnginePtr)>>(
          'Cronet_Engine_StopNetLog');
  late final _Cronet_Engine_StopNetLog = _Cronet_Engine_StopNetLogPtr
      .asFunction<void Function(Cronet_EnginePtr)>();

  int Cronet_Engine_Shutdown(
    Cronet_EnginePtr self,
  ) {
    return _Cronet_Engine_Shutdown(
      self,
    );
  }

  late final _Cronet_Engine_ShutdownPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(Cronet_EnginePtr)>>(
          'Cronet_Engine_Shutdown');
  late final _Cronet_Engine_Shutdown =
      _Cronet_Engine_ShutdownPtr.asFunction<int Function(Cronet_EnginePtr)>();

  Cronet_String Cronet_Engine_GetVersionString(
    Cronet_EnginePtr self,
  ) {
    return _Cronet_Engine_GetVersionString(
      self,
    );
  }

  late final _Cronet_Engine_GetVersionStringPtr =
      _lookup<ffi.NativeFunction<Cronet_String Function(Cronet_EnginePtr)>>(
          'Cronet_Engine_GetVersionString');
  late final _Cronet_Engine_GetVersionString =
      _Cronet_Engine_GetVersionStringPtr.asFunction<
          Cronet_String Function(Cronet_EnginePtr)>();

  Cronet_String Cronet_Engine_GetDefaultUserAgent(
    Cronet_EnginePtr self,
  ) {
    return _Cronet_Engine_GetDefaultUserAgent(
      self,
    );
  }

  late final _Cronet_Engine_GetDefaultUserAgentPtr =
      _lookup<ffi.NativeFunction<Cronet_String Function(Cronet_EnginePtr)>>(
          'Cronet_Engine_GetDefaultUserAgent');
  late final _Cronet_Engine_GetDefaultUserAgent =
      _Cronet_Engine_GetDefaultUserAgentPtr.asFunction<
          Cronet_String Function(Cronet_EnginePtr)>();

  void Cronet_Engine_AddRequestFinishedListener(
    Cronet_EnginePtr self,
    Cronet_RequestFinishedInfoListenerPtr listener,
    Cronet_ExecutorPtr executor,
  ) {
    return _Cronet_Engine_AddRequestFinishedListener(
      self,
      listener,
      executor,
    );
  }

  late final _Cronet_Engine_AddRequestFinishedListenerPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              Cronet_EnginePtr,
              Cronet_RequestFinishedInfoListenerPtr,
              Cronet_ExecutorPtr)>>('Cronet_Engine_AddRequestFinishedListener');
  late final _Cronet_Engine_AddRequestFinishedListener =
      _Cronet_Engine_AddRequestFinishedListenerPtr.asFunction<
          void Function(Cronet_EnginePtr, Cronet_RequestFinishedInfoListenerPtr,
              Cronet_ExecutorPtr)>();

  void Cronet_Engine_RemoveRequestFinishedListener(
    Cronet_EnginePtr self,
    Cronet_RequestFinishedInfoListenerPtr listener,
  ) {
    return _Cronet_Engine_RemoveRequestFinishedListener(
      self,
      listener,
    );
  }

  late final _Cronet_Engine_RemoveRequestFinishedListenerPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  Cronet_EnginePtr, Cronet_RequestFinishedInfoListenerPtr)>>(
      'Cronet_Engine_RemoveRequestFinishedListener');
  late final _Cronet_Engine_RemoveRequestFinishedListener =
      _Cronet_Engine_RemoveRequestFinishedListenerPtr.asFunction<
          void Function(
              Cronet_EnginePtr, Cronet_RequestFinishedInfoListenerPtr)>();

  /// Concrete interface Cronet_Engine is implemented by Cronet.
  /// The app can use this for testing / mocking.
  Cronet_EnginePtr Cronet_Engine_CreateWith(
    Cronet_Engine_StartWithParamsFunc StartWithParamsFunc,
    Cronet_Engine_StartNetLogToFileFunc StartNetLogToFileFunc,
    Cronet_Engine_StopNetLogFunc StopNetLogFunc,
    Cronet_Engine_ShutdownFunc ShutdownFunc,
    Cronet_Engine_GetVersionStringFunc GetVersionStringFunc,
    Cronet_Engine_GetDefaultUserAgentFunc GetDefaultUserAgentFunc,
    Cronet_Engine_AddRequestFinishedListenerFunc AddRequestFinishedListenerFunc,
    Cronet_Engine_RemoveRequestFinishedListenerFunc
        RemoveRequestFinishedListenerFunc,
  ) {
    return _Cronet_Engine_CreateWith(
      StartWithParamsFunc,
      StartNetLogToFileFunc,
      StopNetLogFunc,
      ShutdownFunc,
      GetVersionStringFunc,
      GetDefaultUserAgentFunc,
      AddRequestFinishedListenerFunc,
      RemoveRequestFinishedListenerFunc,
    );
  }

  late final _Cronet_Engine_CreateWithPtr = _lookup<
          ffi.NativeFunction<
              Cronet_EnginePtr Function(
                  Cronet_Engine_StartWithParamsFunc,
                  Cronet_Engine_StartNetLogToFileFunc,
                  Cronet_Engine_StopNetLogFunc,
                  Cronet_Engine_ShutdownFunc,
                  Cronet_Engine_GetVersionStringFunc,
                  Cronet_Engine_GetDefaultUserAgentFunc,
                  Cronet_Engine_AddRequestFinishedListenerFunc,
                  Cronet_Engine_RemoveRequestFinishedListenerFunc)>>(
      'Cronet_Engine_CreateWith');
  late final _Cronet_Engine_CreateWith =
      _Cronet_Engine_CreateWithPtr.asFunction<
          Cronet_EnginePtr Function(
              Cronet_Engine_StartWithParamsFunc,
              Cronet_Engine_StartNetLogToFileFunc,
              Cronet_Engine_StopNetLogFunc,
              Cronet_Engine_ShutdownFunc,
              Cronet_Engine_GetVersionStringFunc,
              Cronet_Engine_GetDefaultUserAgentFunc,
              Cronet_Engine_AddRequestFinishedListenerFunc,
              Cronet_Engine_RemoveRequestFinishedListenerFunc)>();
